Week :one: Ass. :five: & :six:

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.12)
 project(cpp_yellow)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -Werror -pedantic -O0")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -pedantic -O0")
 
 message("CMAKE_CXX_FLAGS_DEBUG:  ${CMAKE_CXX_FLAGS_DEBUG}")
 
@@ -11,3 +11,5 @@ add_executable(week1_assignment_1 week1/assignment_1/temperature.cpp)
 add_executable(week1_assignment_2 week1/assignment_2/block_weight.cpp)
 add_executable(week1_assignment_3 week1/assignment_3/find_max_repetition_count.cpp)
 add_executable(week1_assignment_4 week1/assignment_4/team_tasks.cpp)
+add_executable(week1_assignment_5 week1/assignment_5/sqr_all.cpp)
+add_executable(week1_assignment_6 week1/assignment_6/element_reference.cpp)
