--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,10 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -pedantic -O0"
 message("CMAKE_CXX_FLAGS_DEBUG:  ${CMAKE_CXX_FLAGS_DEBUG}")
 
 add_executable(cpp_yellow main.cpp)
-add_executable(week1_assignment_1 week1/assignment_1/temperature.cpp)
-add_executable(week1_assignment_2 week1/assignment_2/block_weight.cpp)
-add_executable(week1_assignment_3 week1/assignment_3/find_max_repetition_count.cpp)
-add_executable(week1_assignment_4 week1/assignment_4/team_tasks.cpp)
-add_executable(week1_assignment_5 week1/assignment_5/sqr_all.cpp)
-add_executable(week1_assignment_6 week1/assignment_6/element_reference.cpp)
+add_executable(week_1_assignment_1 week_1/assignment_1/temperature.cpp)
+add_executable(week_1_assignment_2 week_1/assignment_2/block_weight.cpp)
+add_executable(week_1_assignment_3 week_1/assignment_3/find_max_repetition_count.cpp)
+add_executable(week_1_assignment_4 week_1/assignment_4/team_tasks.cpp)
+add_executable(week_1_assignment_5 week_1/assignment_5/sqr_all.cpp)
+add_executable(week_1_assignment_6 week_1/assignment_6/element_reference.cpp)
+add_executable(week_2_assignment_1 week_2/assignment_1/solution.cpp)
