--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,6 @@ add_executable(week_1_assignment_5 week_1/assignment_5/sqr_all.cpp)
 add_executable(week_1_assignment_6 week_1/assignment_6/element_reference.cpp)
 add_executable(week_2_assignment_1 week_2/assignment_1/solution.cpp)
 add_executable(week_2_assignment_2 week_2/assignment_2/test_equation.cpp)
+add_executable(week_2_assignment_3 week_2/assignment_3/test_person.cpp)
+add_executable(week_2_assignment_4 week_2/assignment_4/test_rational.cpp)
+add_executable(week_2_assignment_5 week_2/assignment_5/test_palindrom.cpp)
