Week :three: Ass. :one:

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,4 @@ add_executable(week_2_assignment_2 week_2/assignment_2/test_equation.cpp)
 add_executable(week_2_assignment_3 week_2/assignment_3/test_person.cpp)
 add_executable(week_2_assignment_4 week_2/assignment_4/test_rational.cpp)
 add_executable(week_2_assignment_5 week_2/assignment_5/test_palindrom.cpp)
+add_executable(week_3_assignment_1 week_3/assignment_1/sum_reverse_sort.cpp)
