--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,3 +19,4 @@ add_executable(week_2_assignment_3 week_2/assignment_3/test_person.cpp)
 add_executable(week_2_assignment_4 week_2/assignment_4/test_rational.cpp)
 add_executable(week_2_assignment_5 week_2/assignment_5/test_palindrom.cpp)
 add_executable(week_3_assignment_1 week_3/assignment_1/sum_reverse_sort.cpp)
+add_executable(week_3_assignment_2 week_3/assignment_2/phone_number.cpp)
