--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -pedantic -O0"
 
 message("CMAKE_CXX_FLAGS_DEBUG:  ${CMAKE_CXX_FLAGS_DEBUG}")
 
-add_executable(cpp_yellow main.cpp)
+add_executable(cpp_yellow main.cpp week_3/assignment_3/rectangle.h)
 add_executable(week_1_assignment_1 week_1/assignment_1/temperature.cpp)
 add_executable(week_1_assignment_2 week_1/assignment_2/block_weight.cpp)
 add_executable(week_1_assignment_3 week_1/assignment_3/find_max_repetition_count.cpp)
@@ -20,3 +20,10 @@ add_executable(week_2_assignment_4 week_2/assignment_4/test_rational.cpp)
 add_executable(week_2_assignment_5 week_2/assignment_5/test_palindrom.cpp)
 add_executable(week_3_assignment_1 week_3/assignment_1/sum_reverse_sort.cpp)
 add_executable(week_3_assignment_2 week_3/assignment_2/phone_number.cpp)
+add_executable(week_3_assignment_4 week_3/assignment_4/query.cpp week_3/assignment_4/main.cpp week_3/assignment_4/responses.cpp week_3/assignment_4/responses.h week_3/assignment_4/bus_manager.cpp week_3/assignment_4/bus_manager.h)
+add_executable(week_4_assignment_1 week_4/assignment_1/print_vector_part.cpp)
+add_executable(week_4_assignment_2 week_4/assignment_2/find_greater_elements.cpp)
+add_executable(week_4_assignment_3 week_4/assignment_3/split_into_words.cpp)
+add_executable(week_4_assignment_4 week_4/assignment_4/remove_duplicates.cpp)
+add_executable(week_4_assignment_5 week_4/assignment_5/print_permutations.cpp)
+add_executable(week_4_assignment_6 week_4/assignment_6/print_stats.cpp)
