--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,3 +27,5 @@ add_executable(week_4_assignment_3 week_4/assignment_3/split_into_words.cpp)
 add_executable(week_4_assignment_4 week_4/assignment_4/remove_duplicates.cpp)
 add_executable(week_4_assignment_5 week_4/assignment_5/print_permutations.cpp)
 add_executable(week_4_assignment_6 week_4/assignment_6/print_stats.cpp)
+add_executable(week_4_assignment_7_1 week_4/assignment_7/merge_sort_div2.cpp)
+add_executable(week_4_assignment_7_2 week_4/assignment_7/merge_sort_div3.cpp)
