Week :four: Ass. :ten:

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,3 +29,7 @@ add_executable(week_4_assignment_5 week_4/assignment_5/print_permutations.cpp)
 add_executable(week_4_assignment_6 week_4/assignment_6/print_stats.cpp)
 add_executable(week_4_assignment_7_1 week_4/assignment_7/merge_sort_div2.cpp)
 add_executable(week_4_assignment_7_2 week_4/assignment_7/merge_sort_div3.cpp)
+add_executable(week_4_assignment_8 week_4/assignment_8/find_nearest_element.cpp)
+add_executable(week_4_assignment_9 week_4/assignment_9/person_names.cpp)
+add_executable(week_4_assignment_10_1 week_4/assignment_10/find_starts_with_char.cpp)
+add_executable(week_4_assignment_10_2 week_4/assignment_10/find_starts_with_string.cpp)
