--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,3 +33,5 @@ add_executable(week_4_assignment_8 week_4/assignment_8/find_nearest_element.cpp)
 add_executable(week_4_assignment_9 week_4/assignment_9/person_names.cpp)
 add_executable(week_4_assignment_10_1 week_4/assignment_10/find_starts_with_char.cpp)
 add_executable(week_4_assignment_10_2 week_4/assignment_10/find_starts_with_string.cpp)
+add_executable(week_4_assignment_11_1 week_4/assignment_11/build_expression.cpp)
+add_executable(week_4_assignment_11_2 week_4/assignment_11/build_expression_without_redundant_parentheses.cpp)
