Week :five: Ass. :one:

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,3 +35,4 @@ add_executable(week_4_assignment_10_1 week_4/assignment_10/find_starts_with_char
 add_executable(week_4_assignment_10_2 week_4/assignment_10/find_starts_with_string.cpp)
 add_executable(week_4_assignment_11_1 week_4/assignment_11/build_expression.cpp)
 add_executable(week_4_assignment_11_2 week_4/assignment_11/build_expression_without_redundant_parentheses.cpp)
+add_executable(week_5_assignment_1 week_5/assignment_1/inheritance.cpp)
